fix: products on safari

--- a/assets/base.css
+++ b/assets/base.css
@@ -1261,6 +1261,7 @@ summary::-webkit-details-marker {
   background-color: rgba(var(--color-foreground), 0.1);
   position: relative;
   overflow: hidden;
+  width: 100%;
 }
 
 .media--transparent {
